--- a/Client/package.json
+++ b/Client/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "aos": "^2.3.4",
     "axios": "^1.8.4",
+    "browser-image-compression": "^2.0.2",
     "chart.js": "^4.4.8",
     "date-fns": "^4.1.0",
     "gsap": "^3.12.7",
