--- a/Server/package.json
+++ b/Server/package.json
@@ -1,11 +1,11 @@
 {
   "name": "server",
   "version": "1.0.0",
+  "description": "Backend API for beauty booking application",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon server.js"
   },
   "keywords": [
     "beauty",
@@ -16,7 +16,6 @@
   ],
   "author": "",
   "license": "ISC",
-  "description": "Backend API for beauty booking application",
   "dependencies": {
     "bcrypt": "^6.0.0",
     "cloudinary": "^1.30.0",
@@ -41,6 +40,6 @@
     "nodemon": "^2.0.22"
   },
   "engines": {
-    "node": ">=14.0.0"
+    "node": ">=18.0.0"
   }
 }
