--- a/Server/package.json
+++ b/Server/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "build": "npm install"
   },
   "keywords": [
     "beauty",
@@ -34,7 +35,7 @@
     "multer-storage-cloudinary": "^4.0.0",
     "nodemailer": "^6.9.1",
     "readable-stream": "^4.7.0",
-    "twilio": "^5.5.2"
+    "twilio": "^5.7.3"
   },
   "devDependencies": {
     "node-gyp": "^11.2.0",
